# voice-discussion-system

./: .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  DEMO_SCENARIOS.md  DEMO_WHITEBOARD_SCENARIO.md  FINAL_COMPLETION.md  README.md  RESEARCH_IMPLEMENTATION.md  SETUP_GUIDE.md  SYSTEM_VERIFICATION_2026-01-09.md  TEST_REPORT_20260109_142817.json  TEST_REPORT_20260109_142841.json  TEST_RESULTS_2026-01-09.md  TOPIC_MAP_IMPLEMENTATION.md  TROUBLESHOOTING.md  cli_discussion.py  create_session.json  demo_imbalance.ps1  demo_stagnation.ps1  demo_test.ps1  requirements.txt  run_all_tests.py  run_tests.py  sample_dialog.txt  test_analysis_en.ps1  test_imbalance.py  test_integrated_analysis.ps1  test_productive.py  test_request.json  test_stagnation.py
backend/: API.md  README.md  alembic.ini  analysis_segment20.py  config.template.yaml  config.yaml  pyproject.toml  run.py  test_issue_map_llm.py
backend/alembic/: env.py
backend/alembic/versions/: d1a38941cbed_initial_create_base_tables.py
backend/app/: __init__.py  config.py  main.py  openapi_schema.py
backend/app/core/: prompts.py
backend/app/database/: __init__.py  db.py  migrate.py  models.py
backend/app/models/: schemas.py
backend/app/routers/: analysis.py  history.py  integrated.py  sessions.py  terms.py
backend/app/services/: analysis.py  full_analysis.py  integrated_analysis.py  intervention.py  issue_map.py  llm.py  meeting_agent.py  message_buffer.py  minutes_generator.py  participant_profile.py  prosody_analysis.py  session.py  session_advanced.py  term_suggestion.py
backend/app/sockets/: __init__.py  (+1 more)
(+20 files in other folders)
